# QOS

./: .gitignore  Cargo.toml  README.md  deny.toml  dummy_module-0.1.0.qos  dummy_module-1.0.0.qos  install.sh  package-lock.json  package.json  pnpm-lock.yaml  qos.toml  rust-toolchain.toml  tactical_guestbook.qos  turbo.json  vercel.json
.cargo/: config.toml
.qos-state/: .qos-identity  db
.turbo/cache/: d4f09749a68a00bc-manifest.json  d4f09749a68a00bc-meta.json  fbff2524958af539-manifest.json  fbff2524958af539-meta.json  fbff2524958af539.tar.zst
apps/marketing/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/marketing/public/: docs-index.json
apps/marketing/scripts/: generate-search-index.js
apps/marketing/src/app/: globals.css  layout.tsx  page.tsx
apps/marketing/src/app/api/registry/checkout/: route.ts
apps/marketing/src/app/developers/: page.tsx
apps/marketing/src/app/docs/: layout.tsx  page.tsx
apps/marketing/src/app/docs/architecture/: page.tsx
apps/marketing/src/app/docs/architecture/crdt/: page.tsx
apps/marketing/src/app/docs/architecture/edge-node/: page.tsx
apps/marketing/src/app/docs/architecture/sled/: page.tsx
apps/marketing/src/app/docs/architecture/websocket/: page.tsx
apps/marketing/src/app/docs/first-module/: page.tsx
apps/marketing/src/app/docs/installation/: page.tsx
apps/marketing/src/app/docs/quick-start/: page.tsx
apps/marketing/src/app/docs/sdk-reference/: page.tsx
apps/marketing/src/app/docs/sdk-reference/errors/: page.tsx
apps/marketing/src/app/docs/sdk-reference/read-input/: page.tsx
apps/marketing/src/app/docs/sdk-reference/state-get/: page.tsx
apps/marketing/src/app/docs/sdk-reference/state-set/: page.tsx
apps/marketing/src/app/docs/sdk-reference/write-output/: page.tsx
apps/marketing/src/app/docs/wasm-guides/: page.tsx
apps/marketing/src/app/docs/wasm-guides/broadcast/: page.tsx
apps/marketing/src/app/docs/wasm-guides/guestbook/: page.tsx
apps/marketing/src/app/docs/wasm-guides/vip/: page.tsx
apps/marketing/src/app/ecosystem/: page.tsx
apps/marketing/src/app/features/: page.tsx
apps/marketing/src/app/m/[slug]/: ModuleDetailClient.tsx  page.tsx
apps/marketing/src/app/og/: route.tsx
apps/marketing/src/app/pricing/: page.tsx
apps/marketing/src/app/registry/: layout.tsx  page.tsx
apps/marketing/src/components/: SiteFooter.tsx  SiteNav.tsx
apps/marketing/src/components/docs/: CodeBlock.tsx  ComingSoon.tsx  DocsLayoutShell.tsx  SearchModal.tsx  Sidebar.tsx
apps/marketing/src/lib/: license.ts  registry-data.ts
apps/mobile/: App.tsx  app.json  eas-hooks.sh  eas.json  package-lock.json  package.json
apps/mobile/src/: theme.ts
apps/mobile/src/components/: ConnectionPulse.tsx  CrtFlicker.tsx  EdgeStateModal.tsx  ExecutionHud.tsx  MeshTopologyWidget.tsx  ReconnectionOverlay.tsx  ScannerOverlay.tsx  SystemTerminal.tsx  TransactionReceipt.tsx
apps/mobile/src/hooks/: useDeepLink.ts  useTelemetryStream.ts
apps/mobile/src/navigation/: AppNavigator.tsx
apps/mobile/src/screens/: DashboardScreen.tsx  EdgeExplorerScreen.tsx  ExecuteScannerScreen.tsx  LibraryScreen.tsx  SetupScreen.tsx
apps/mobile/src/services/: api.ts  connection.ts
apps/mobile/src/store/: useAppStore.ts  useConnectionStore.ts  useTelemetryStore.ts
apps/web/: next.config.ts  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/admin/dashboard/: page.tsx
apps/web/src/app/admin/login/: actions.ts  page.tsx
apps/web/src/app/admin/mesh/: MeshRadarGraph.tsx  page.tsx
apps/web/src/app/explorer/: page.tsx
apps/web/src/app/m/[moduleId]/: page.tsx
apps/web/src/components/: DashboardHeader.tsx  EdgeExplorer.tsx  MetricsGrid.tsx  TelemetryPanel.tsx
apps/web/src/lib/: ConnectionContext.tsx  ConnectionService.ts  auth.ts
bins/qos-bundler/: Cargo.toml
bins/qos-bundler/src/: main.rs
bins/qos-cli/: Cargo.toml
bins/qos-cli/src/: cmd_developer.rs  cmd_logs.rs  cmd_module.rs  cmd_network.rs  cmd_node.rs  cmd_simulate.rs  cmd_test.rs  main.rs
bins/qos-runtime/: Cargo.toml
bins/qos-runtime/src/: config.rs  context.rs  main.rs
crates/qos-api/: Cargo.toml
crates/qos-api/src/: auth.rs  lib.rs  state.rs  telemetry.rs
crates/qos-api/src/routes/: broadcast.rs  execute.rs  mod.rs  network.rs  state.rs  static_files.rs  stream.rs
crates/qos-bootloader/: Cargo.toml
crates/qos-bootloader/src/: lib.rs  loader.rs  manifest.rs  pipeline.rs
crates/qos-bootloader/tests/: manifest_tests.rs
crates/qos-cache/: Cargo.toml
crates/qos-cache/src/: lib.rs  lru.rs
crates/qos-crypto/: Cargo.toml
crates/qos-crypto/src/: hash.rs  lib.rs  sign.rs
crates/qos-engine/: Cargo.toml
crates/qos-engine/src/: context.rs  engine.rs  event_bus.rs  lib.rs  memory_guard.rs  registry.rs
crates/qos-fetch/: Cargo.toml
crates/qos-fetch/src/: fetcher.rs  lib.rs
crates/qos-host-abi/: Cargo.toml
crates/qos-host-abi/src/: capability_gate.rs  imports.rs  lib.rs
crates/qos-policy/: Cargo.toml
crates/qos-policy/src/: allowlist.rs  lib.rs  rules.rs
crates/qos-qr/: Cargo.toml
crates/qos-qr/src/: decode.rs  lib.rs
crates/qos-sandbox/: Cargo.toml
crates/qos-sandbox/src/: fuel.rs  lib.rs  manager.rs  resource.rs
crates/qos-sandbox/tests/: sandbox_tests.rs
crates/qos-sdk/: Cargo.toml
crates/qos-sdk/src/: lib.rs
crates/qos-state/: Cargo.toml
crates/qos-state-sync/: Cargo.toml
crates/qos-state-sync/src/: engine.rs  lib.rs  network.rs  types.rs
crates/qos-state-sync/tests/: sync_tests.rs
crates/qos-state/src/: evict.rs  lib.rs  store.rs  tx.rs
crates/qos-sync-adapters/: Cargo.toml
crates/qos-sync-adapters/src/: lib.rs  local.rs  mqtt.rs  redis.rs  s3.rs
crates/qos-types/: Cargo.toml
crates/qos-types/src/: descriptor.rs  error.rs  lib.rs  manifest.rs  network.rs  sync.rs
docs/: HOST_ABI.md  SECURITY.md
scripts/: demo.sh  generate_trigger_qr.js  package.json  prepare_release.sh
tests/dummy_module/: Cargo.toml  manifest.json
tests/dummy_module/src/: lib.rs
tests/integration/: bootloader_tests.rs  engine_tests.rs  state_sync_tests.rs
(+2 files in other folders)
