[package]
name        = "qos-cli"
description = "Q-OS developer CLI — inject QR payloads, inspect state"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "qos"
path = "src/main.rs"

[dependencies]
qos-types      = { workspace = true }
qos-bootloader = { workspace = true }
qos-sandbox    = { workspace = true }
qos-state      = { workspace = true }
qos-engine     = { workspace = true }
qos-policy     = { workspace = true }
qos-api        = { path = "../../crates/qos-api" }
qos-state-sync = { path = "../../crates/qos-state-sync" }
tokio          = { workspace = true }
clap           = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow         = { workspace = true }
reqwest        = { workspace = true }
sha2           = { workspace = true }
hex            = { workspace = true }
serde          = { workspace = true }
toml           = { workspace = true }
uuid           = { workspace = true, features = ["v4"] }
sled           = { workspace = true }
libp2p         = { version = "0.56.0", features = ["macros", "tcp", "tokio", "yamux", "noise", "mdns", "gossipsub", "kad", "dns", "autonat", "relay", "dcutr", "identify", "ping"] }
qr2term        = "0.3.3"
local-ip-address = "0.6.13"
indicatif      = "0.17"
owo-colors     = "4.1"
tar            = "0.4"
flate2         = "1.0"
tempfile       = "3"
ratatui        = "0.26"
crossterm      = "0.27"
tokio-tungstenite = "0.21"
futures-util   = "0.3"
keyring        = "2"
rand           = "0.8"
ed25519-dalek  = { workspace = true }
