[package]
name        = "qos-crypto"
description = "SHA-256 hashing and Ed25519 signature verification for Q-OS"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
qos-types     = { workspace = true }
sha2          = { workspace = true }
ed25519-dalek = { workspace = true }
hex           = { workspace = true }
thiserror     = { workspace = true }
