[package]
name        = "qos-fetch"
description = "Async WASM module fetcher for Q-OS"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
qos-types  = { workspace = true }
qos-crypto = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
