[package]
name        = "qos-qr"
description = "QR code decoding for Q-OS bootloader"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
qos-types = { workspace = true }
rqrr      = { workspace = true }
image     = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
