[package]
name = "qos-state-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bincode = "1.3.3"
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "tokio", "tcp", "macros", "noise", "yamux", "cbor", "request-response"] }
qos-state = { version = "0.1.0", path = "../qos-state" }
qos-types = { version = "0.1.0", path = "../qos-types" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
