[package]
name        = "qos-types"
description = "Shared types, traits and error definitions for Q-OS"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
serde   = { workspace = true }
url     = { workspace = true }
uuid    = { workspace = true }
thiserror = { workspace = true }
